--- a/process.env
+++ b/process.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://<username>:<password>@<host>:<port>/<database>?sslmode=require
+DATABASE_URL=postgresql://neondb_owner:s8D0OVLRGogS@ep-cool-pine-a5twmmxz.us-east-2.aws.neon.tech/neondb?sslmode=require
